kubernetes/deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: vivo
  namespace: vivo
  labels:
    app: vivo
    environment: dev
    tier: backend
    owner: szd2013
spec:
  selector:
    matchLabels:
      app: vivo
      environment: dev
      tier: backend
      owner: szd2013
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: vivo
        environment: dev
        tier: backend
        owner: szd2013
    spec:
      hostname: vivo
      containers:
      - image: 665083158573.dkr.ecr.us-east-1.amazonaws.com/wcmc/vivo:latest
        name: vivo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: vivo
        resources:
          requests:
            memory: 10G
            cpu: 2.2
          limits:
            memory: 10G
            cpu: 2.2
        volumeMounts:
         - name: vivo-pvc
           mountPath: /usr/local/VIVO/home
      - image: 665083158573.dkr.ecr.us-east-1.amazonaws.com/wcmc/vivosolr:latest
        name:  solr
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8983
        resources:
          limits:
            cpu: 1
            memory: 3G
          requests:
            cpu: 1
            memory: 3G
        volumeMounts:
          - name:  solr-pvc
            mountPath:  /opt/vivocore
      - image: 665083158573.dkr.ecr.us-east-1.amazonaws.com/wcmc/vivonginx:latest
        name:  nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: "/nginx-health"
            scheme: HTTPS
            port: 443
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: "/nginx-health"
            scheme: HTTPS
            port: 443
          initialDelaySeconds: 5
          periodSeconds: 1
          failureThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
          - name:  nginx-conf
            mountPath:  /etc/nginx/conf.d
      nodeSelector:
        app: vivo
      volumes:
        - name: vivo-pvc 
          persistentVolumeClaim:
            claimName: vivo-tdb-pvc
        - name: solr-pvc 
          persistentVolumeClaim:
            claimName: solr-tdb-pvc
        - name: nginx-conf  
          configMap:
            name: vivo-nginx-configmap
