kubernetes/service-solr.yaml
apiVersion: v1
kind: Service
metadata:
  name: vivosolr
  namespace: vivo
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /solr
    alb.ingress.kubernetes.io/success-codes: 200-302
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
  labels:
    app: vivo
    environment: dev
    tier: backend
    owner: szd2013
spec:
  ports:
    - name: http
      port: 8983
      targetPort: 8983
      protocol: TCP
  selector:
    app: vivosolr
    tier: backend
  type: NodePort
