kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vivo
  namespace: vivo
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /search
    alb.ingress.kubernetes.io/success-codes: 200-302
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-port: '443'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
  labels:
    app: vivo
    environment: dev
    tier: backend
    owner: szd2013
spec:
  ports:
    - name: http
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: vivo
    tier: backend
  type: NodePort
