kubernetes/alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vivo-dev-ing
  namespace: vivo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-05aff72d1d4ef23fb
    alb.ingress.kubernetes.io/load-balancer-attributes:  idle_timeout.timeout_seconds=500
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    environment: dev
    owner: szd2013
spec:
  rules:
    - host: vivo-dev.weill.cornell.edu
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: vivo
              servicePort: 80
